--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 9009
  
 spring:
+  datasource:
+    generate-unique-name: false
   h2:
     console:
       enabled: true
@@ -12,3 +14,41 @@ spring:
         persistence:
           validation:
             model: none
+
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        max-page-size: 100
+  profiles:
+    active:
+    - dev
+  
+---
+spring:
+  profiles: prod
+  datasource:
+    url: jdbc:h2:./hoaxify-prod
+    username: sa
+  jpa:
+    hibernate:
+      ddl-auto: update
+  h2:
+    console:
+      enabled: false
+hoaxify:
+  uploadpath: uploads-prod
+  
+---
+spring:
+  profiles: dev
+  datasource:
+    url: jdbc:h2:mem:hoaxify-dev
+hoaxify:
+  uploadpath: uploads-dev
+
+---
+spring:
+  profiles: test
+hoaxify:
+  uploadpath: uploads-test 
